# Brave

./: .gitignore  DEPS  PRESUBMIT.py  brave_paks.gni  chromium_presubmit_config.json5  package-lock.json  package.json
.github/workflows/: devskim.yml
android/: android_browser_tests.gni  brave_java_resources.gni
app/: BUILD.gn  brave_command_ids.h  brave_main_delegate_browsertest.cc  brave_strings.grd  generate_command_metadata.py  generated_resources.grd  os_settings_strings.grdp  settings_strings.grdp
base/: BUILD.gn  feature_override_unittest.cc
browser/: about_flags.cc  brave_content_browser_client.cc  brave_content_browser_client.h  sources.gni
browser/ai_chat/: BUILD.gn  ai_chat_metrics_browsertest.cc
browser/brave_rewards/android/: brave_rewards_native_worker.cc  brave_rewards_native_worker.h
browser/brave_shields/: ad_block_service_browsertest.cc  ad_block_service_browsertest.h
browser/brave_wallet/: external_wallets_importer.cc
browser/ui/: BUILD.gn  brave_browser_command_controller.cc  browser_commands.cc  browser_commands.h
browser/ui/android/strings/: android_brave_strings.grd  android_chrome_strings.grd
browser/ui/tabs/: brave_tab_layout_constants.h
browser/ui/views/frame/: brave_tab_strip_region_view.cc  brave_tab_strip_region_view.h  immersive_mode_controller_aura.cc  immersive_mode_controller_aura.h
browser/ui/views/tabs/: brave_tab_style_views.inc.cc
browser/ui/webui/: playlist_ui.cc  playlist_ui.h
browser/ui/webui/ai_chat/: ai_chat_ui.h  ai_chat_ui_page_handler.cc
browser/ui/webui/brave_rewards/: rewards_panel_ui.cc
browser/ui/webui/new_tab_page/: brave_new_tab_page_handler.cc  brave_new_tab_ui.h
chromium_src/chrome/browser/printing/: print_view_manager.cc  print_view_manager.h
chromium_src/chrome/common/: chrome_features.cc
chromium_src/v8/src/inspector/: value-mirror.cc
common/extensions/api/: brave_rewards.json
components/: autofill_payments_strings.grdp  autofill_strings.grdp  plus_addresses_strings.grdp  search_engine_choice_strings.grdp
components/ai_chat/content/browser/: ai_chat_tab_helper.cc  ai_chat_tab_helper.h  page_content_fetcher.cc
components/ai_chat/core/browser/: ai_chat_metrics.cc  constants.cc  conversation_driver.cc  conversation_driver.h
components/api_request_helper/: api_request_helper.cc
components/brave_new_tab_ui/: brave_new_tab_page.mojom
components/brave_new_tab_ui/storage/: new_tab_storage.ts
components/brave_news/browser/: feed_v2_builder.cc
components/brave_rewards/browser/: rewards_service_impl.cc
components/brave_shields/resources/: BUILD.gn  adblock_bundle.grd
components/brave_wallet/browser/: brave_wallet_constants.h
components/brave_wallet/common/: brave_wallet.mojom
components/brave_wallet_ui/constants/: types.ts
components/brave_wallet_ui/page/: container.tsx  wallet_page.html
components/brave_wallet_ui/panel/: container.tsx
components/brave_wallet_ui/stories/: locale.ts
components/definitions/: newTab.d.ts
components/misc_metrics/: BUILD.gn  page_metrics.cc  page_metrics.h  pref_names.h
components/p3a/: metric_names.h
components/resources/: ai_chat_ui_strings.grdp  brave_components_strings.grd  commands.grdp  rewards_strings.grdp  wallet_strings.grdp
components/time_period_storage/: time_period_storage.h  time_period_storage_unittest.cc
components/webui/: webui_resources.cc
ios/app/: BUILD.gn  brave_core_main.mm
ios/browser/: BUILD.gn
ios/browser/brave_wallet/: BUILD.gn  bitcoin_wallet_service_factory.h  bitcoin_wallet_service_factory.mm  brave_wallet_factory_wrappers.h  brave_wallet_factory_wrappers.mm  brave_wallet_service_factory.mm
patches/: base-BUILD.gn.patch  build-config-BUILDCONFIG.gn.patch  build-config-compiler-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-features-tab_ui-BUILD.gn.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedRootUiCoordinator.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-browsing_data-chrome_browsing_data_remover_delegate.cc.patch  chrome-browser-download-download_target_determiner.cc.patch  chrome-browser-net-profile_network_context_service.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-settings-privacy_page-privacy_page.html.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-android-toolbar-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-ui-browser.cc.patch  chrome-browser-ui-browser_command_controller.cc.patch  chrome-browser-ui-browser_ui_prefs.cc.patch  chrome-browser-ui-chrome_pages.cc.patch  chrome-browser-ui-omnibox-chrome_omnibox_client.h.patch  chrome-browser-ui-tab_helpers.cc.patch  chrome-browser-ui-views-frame-browser_frame_view_linux.cc.patch  chrome-browser-ui-views-frame-browser_frame_view_linux.h.patch  chrome-browser-ui-views-frame-browser_view.cc.patch  chrome-browser-ui-webui-print_preview-print_preview_ui.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-common-BUILD.gn.patch  chrome-renderer-BUILD.gn.patch  chrome-renderer-chrome_content_renderer_client.cc.patch  chrome-test-BUILD.gn.patch  components-content_settings-core-browser-content_settings_uma_util.cc.patch  components-omnibox-browser-BUILD.gn.patch  components-omnibox-browser-autocomplete_controller.cc.patch  components-omnibox-browser-omnibox_edit_model.cc.patch  components-sync-protocol-proto_visitors.h.patch  content-browser-renderer_host-navigation_request.cc.patch  content-browser-renderer_host-render_frame_host_impl.cc.patch  (+23 more)
patches/v8/: BUILD.gn.patch
resources/: resource_ids.spec
services/printing/: pdf_to_bitmap_converter.cc  pdf_to_bitmap_converter.h
test/: BUILD.gn
ui/webui/resources/: BUILD.gn  sources.gni
v8/include/: v8-isolate-page-graph-utils.h
(+95 files in other folders)
